refactor: neutralize compatibility loader cache views